# ToEE-Modding-Assets

./: .gitignore  .gitmodules  README.md  toee_icon.blend  toee_map_render_template_wip.blend
010 Editor Templates & Scripts/: DAG.bt  SKM.bt
Blender Importers+Exporters/io_scene_toee/: __init__.py  export_dag.py  import_dag.py  import_skm.py  utils.py
Blender Importers+Exporters/io_scene_toee/model_builder/: clipper_builder.py  material_builder.py  model_builder.py
Blender Importers+Exporters/io_scene_toee/model_parser/: dag_reader.py  mdf_reader.py  skm_reader.py
Blender Importers+Exporters/io_scene_toee/model_writer/: dag_writer.py
File format specifications/: DAG.txt
Utils src/: CMakeLists.txt
Utils src/DAGHeaderParser/: CMakeLists.txt  DAGHeaderParser.cpp
Utils src/DAGtoObjConverter/: CMakeLists.txt  DAGtoObjConverter.cpp
Utils src/ToEEModelViewer/: CMakeLists.txt
Utils src/ToEEModelViewer/libs/glad/: CMakeLists.txt
Utils src/ToEEModelViewer/libs/glad/include/glad/: glad.h
Utils src/ToEEModelViewer/libs/glad/src/: glad.c
Utils src/ToEEModelViewer/libs/tinyfiledialogs/: CMakeLists.txt
Utils src/ToEEModelViewer/libs/tinyfiledialogs/src/: tinyfiledialogs.c
Utils src/ToEEModelViewer/src/: main.cpp
Utils src/ToEEModelViewer/src/System/: Camera.cpp  Camera.hpp  HelperShapes.hpp  Logger.cpp  Logger.hpp  MDF_Loader.cpp  MDF_Loader.hpp  Renderer.cpp  Renderer.hpp  SKA_Loader.cpp  SKA_Loader.hpp  SKM_Loader.cpp  SKM_Loader.hpp  TGA_Loader.cpp  TGA_Loader.hpp
